<resources>
    <string name="app_name"></string>
    <string name="select">SEÇ</string>
    <string name="brief">Hangi etkinliğe gidiyorsun?Önce sevdiğin tasarım elbiseyi seç.Bedenini seç ve ne zaman giymek istediğini belirt.</string>
    <string name="skip">A T L A</string>
    <string name="how">N A S I L  Ç A L I Ş I Y O R</string>
    <string name="user">User : </string>
    <string name="pass">Pass : </string>
    <string name="cancel">CANCEL</string>
    <string name="login">LOGIN</string>
    <string name="gözat">Göz At</string>
    <string name="siyahkreasyonu">SİYAH KREASYONU</string>
    <string name="filtrele">FİLTRELE</string>
    <string name="sırala">SIRALA</string>
    <string name="markaadı">MARKA ADI</string>
    <string name="ürünmodelivetipi">ÜRÜN MODELİ VE TİPİ</string>
    <string name="yüzelli">150 ₺</string>
    <string name="binbeşyüz">| 1500 ₺</string>
    <string name="incele">İNCELE</string>
    <string name="girişyap">Giriş Yap</string>
    <string name="merhaba">Merhaba</string>
    <string name="girişyapın">Giriş Yapın</string>
    <string name="üyeolun">Üye Olun</string>
    <string name="eposta">E-POSTA ADRESİ</string>
    <string name="şifreoluştur">ŞİFRE OLUŞTURUN</string>
    <string name="şifre">ŞİFRE</string>
    <string name="doğumtarihi">DOĞUM TARİHİ</string>
    <string name="date">GG/AA/YYYY</string>
    <string name="devamet">DEVAM ET</string>
    <string name="yada">YA DA</string>
    <string name="google">GOOGLE İLE DEVAM ET</string>
    <string name="badgley">BADGLEY MISCHKA</string>
    <string name="heather">HEATHER GREY SCUBA SHEATH</string>
    <string name="kargo">KARGO BEDAVA</string>
    <string name="finish">ALIŞVERİŞİ TAMAMLA</string>
    <string name="sepetim">SEPETİM</string>
    <string name="kullanımsözleşmesi">Üye olarak Kullanım Sözleşmesi ve Gizlilik Sözleşmesindeki maddeleri kabul ediyor olacaksınız.</string>
</resources>
