<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forthpage_background">




    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:text="@string/gözat"
        android:textSize="34sp"
        android:lineHeight="41sp"
        android:textColor="@color/forthpage_gözat"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="185dp"
        android:layout_height="18dp"
        android:text="@string/siyahkreasyonu"
        android:textSize="14sp"
        android:letterSpacing="0.08"
        android:textColor="@color/siyahkreasyonu"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
    <Button
        android:id="@+id/button2"
        android:layout_width="158dp"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:text="@string/filtrele" />
         <Button
             android:id="@+id/button3"
             android:layout_width="158dp"
             android:layout_height="50dp"
             android:text="@string/sırala"
             android:layout_marginLeft="26dp"
             />
     </LinearLayout>



    <androidx.cardview.widget.CardView
        android:layout_width="323dp"
        android:layout_height="380dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/siyahkreasyonu">

            </ImageView>

            <TextView
                android:layout_width="81dp"
                android:layout_height="14dp"
                android:letterSpacing="0.02"
                android:text="@string/markaadı"
                android:textColor="@color/markaadı"
                android:textSize="12sp"></TextView>

            <TextView
                android:layout_width="140dp"
                android:layout_height="16dp"
                android:text="@string/ürünmodelivetipi"
                android:textColor="@color/ürünmodelivetipi"
                android:textSize="14sp"></TextView>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="21dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="46dp"
                    android:layout_height="21dp"
                    android:text="@string/yüzelli"
                    android:textColor="@color/ürünmodelivetipi"
                    android:textSize="18sp"></TextView>

                <TextView
                    android:layout_width="78dp"
                    android:layout_height="21dp"
                    android:text="@string/binbeşyüz"
                    android:textColor="@color/ürünmodelivetipi"
                    android:textSize="18sp"></TextView>

            </LinearLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="283dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@color/siyahkreasyonu"
                android:text="@string/incele"
                android:textAlignment="center"
                android:textColor="@color/incele"
                android:textSize="17sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>