<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/siyahkreasyonu">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/shadow">

        <TextView
            android:layout_width="145dp"
            android:layout_height="41dp"
            android:layout_marginTop="39dp"
            android:text="@string/sepetim"
            android:textSize="34sp"
            android:lineHeight="41sp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="229dp">

        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <ImageView
            android:layout_width="75dp"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/siyahkreasyonu"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="1dp">

        </ImageView>
            <androidx.cardview.widget.CardView
                android:layout_width="253dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shadow4"
               >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="124dp"
                    android:layout_height="16dp"
                    android:text="@string/badgley"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="114dp"
                    android:layout_marginTop="15dp">

                </TextView>
                <TextView
                    android:layout_width="186dp"
                    android:layout_height="18dp"
                    android:text="@string/heather"
                    android:textSize="12sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="52dp"
                    android:layout_marginTop="5dp">

                </TextView>

                    <TextView
                        android:layout_width="76dp"
                        android:layout_height="12dp"
                        android:text="@string/kargo"
                        android:textSize="10sp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="162dp"
                        android:layout_marginTop="13dp">

                    </TextView>
                    <TextView
                        android:layout_width="46dp"
                        android:layout_height="21dp"
                        android:text="@string/yüzelli"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="192dp"
                        android:layout_marginTop="5dp">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/siyahkreasyonu"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="1dp">

            </ImageView>
            <androidx.cardview.widget.CardView
                android:layout_width="253dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/shadow4"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="124dp"
                        android:layout_height="16dp"
                        android:text="@string/badgley"
                        android:textSize="14sp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="114dp"
                        android:layout_marginTop="15dp">

                    </TextView>
                    <TextView
                        android:layout_width="186dp"
                        android:layout_height="18dp"
                        android:text="@string/heather"
                        android:textSize="12sp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="52dp"
                        android:layout_marginTop="5dp">

                    </TextView>

                    <TextView
                        android:layout_width="76dp"
                        android:layout_height="12dp"
                        android:text="@string/kargo"
                        android:textSize="10sp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="162dp"
                        android:layout_marginTop="13dp">

                    </TextView>
                    <TextView
                        android:layout_width="46dp"
                        android:layout_height="21dp"
                        android:text="@string/yüzelli"
                        android:textSize="18sp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="192dp"
                        android:layout_marginTop="5dp">

                    </TextView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_gravity="center">
        <Button
            android:layout_width="343dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/activity_splash"
            android:text="@string/finish"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/incele"
            >

        </Button>
        </RelativeLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>